konga-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: kong
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - konga.archse.eng.br
    secretName: konga-tls
  rules:
  - host: konga.archse.eng.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: konga-service
            port:
              number: 1337
